@@ -52,7 +52,7 @@ typedef enum
 	CANVAS_POST_FRAME,
 	
 	CANVAS_CONFIGURE_PAPER,
-	CANVAS_MOVE_PRINTHEAD,
+	CANVAS_POSITION_PRINTHEAD,
 	CANVAS_PRINT_IMAGE,
 } CanvasMessage;
 
