@@ -1,4 +1,9 @@
 ==2011-05==
+* Added OpenGL paper canvas page separator
+* Updated device count in emulation window
+* Fixed PAAudio when playing a sound twice
+* Fixed OpenGL paper canvas borders
+* Implemented OpenGL paper canvas pixel density
 * Finished OpenGL paper canvas
 * Fixed video update when shaders are off
 * Fixed resize flickering when using didVSync for drawing
